# arista-avd-poc

./: compose.yml  setup.md
ansible/: .envrc_poc  Dockerfile  Taskfile.yml  ansible.cfg  pyproject.toml
ansible/ansible-ee-avd/: .gitignore  README.md  execution-environment.yml
ansible/avd_examples/campus-fabric/: README.md
ansible/avd_examples/campus-fabric/group_vars/: DC1.yml  DC1_FABRIC.yml  DC1_LEAFS.yml  DC1_NETWORK_PORTS.yml  DC1_SPINES.yml
ansible/avd_examples/common/: example-installation.md  start-avd-playground.md
ansible/avd_examples/cv-pathfinder/: README.md  ansible.cfg
ansible/avd_examples/cv-pathfinder/group_vars/: SITE4.yml  TRANSPORTS.yml  all.yml
ansible/avd_examples/dual-dc-l3ls/: README.md  inventory.yml
ansible/avd_examples/dual-dc-l3ls/clab/: interface_mapping.json  topology.clab.yml
ansible/avd_examples/dual-dc-l3ls/group_vars/: CONNECTED_ENDPOINTS.yml  DC1.yml  DC1_L2_LEAFS.yml  DC1_L3_LEAFS.yml  DC1_SPINES.yml  DC2.yml  DC2_L2_LEAFS.yml  DC2_L3_LEAFS.yml  DC2_SPINES.yml  FABRIC.yml
ansible/avd_examples/isis-ldp-ipvpn/: README.md
ansible/avd_examples/isis-ldp-ipvpn/clab/: interface_mapping.json  topology.clab.yml
ansible/avd_examples/isis-ldp-ipvpn/group_vars/: FABRIC.yml  WAN1.yml
ansible/avd_examples/minimal-evpn-vxlan/clab/: topology.clab.yml
ansible/avd_examples/single-dc-l3ls/: build_deploy.yml
ansible/avd_examples/single-dc-l3ls-ipv6/: README.md
ansible/awx/avd-ee/: execution-environment.yml  requirements.txt  requirements.yml
ansible/playbooks/: sample.yml
python/: .gitignore  Dockerfile  Taskfile.yml  (+3 more)
(+226 files in other folders)
